tests/compile_failure/src/Utility/Integer.bool.fail.cpp
#include <Phi/Utility/Integer.hpp>

int main()
{
    phi::Integer<bool> i{1};
}
